--- a/dokumentacja.tex
+++ b/dokumentacja.tex
@@ -6,6 +6,8 @@
 \usepackage{amsmath} 
 \usepackage{float}
 \usepackage{graphicx}
+\usepackage{siunitx}
+
 
 
 
@@ -59,6 +61,7 @@ Inteligentna donica dostarcza użytkownikowi informacji o stanie rośliny poprze
      \begin{itemize} 
          \item Poziomu wilgotności gleby:
              \begin{itemize}
+                \label{sec:wykorzystanie_ADC}
                  \item \textbf{sucho} - oznacza niski poziom wilgotności gleby (odczyt powyżej 2801), wskazujący na konieczność podlania rośliny
                  \item \textbf{w normie} - oznacza optymalny poziom wilgotności gleby (odczyt między 1601 a 2800), idealny dla wzrostu większości roślin
                  \item \textbf{mokro} - oznacza wysoki poziom wilgotności gleby (odczyt poniżej 1600), wskazujący na nadmiar wody, który może być szkodliwy dla rośliny
@@ -379,9 +382,21 @@ System audio inteligentnej donicy składa się z głośnika (oznaczenie na schem
 System wykorzystuje timery sprzętowe mikrokontrolera do precyzyjnego odmierzania czasu i wykonywania cyklicznych zadań. W przeciwieństwie do PWM, który służy do generowania sygnałów o zmiennym wypełnieniu, timery są wykorzystywane do wywoływania przerwań w określonych odstępach czasu. Funkcjonalność ta obejmuje konfigurację preskalerów, rejestrów porównania oraz obsługę przerwań. Timery są używane do planowania pomiarów, kontroli cykli nawadniania oraz implementacji funkcji oszczędzania energii.
 %olek
 \subsection{Modulacja szerokości impulsu (PWM)}
-Implementacja PWM umożliwia precyzyjne sterowanie elementami wykonawczymi wymagającymi sygnału analogowego, takimi jak pompy wody czy wentylatory. Funkcjonalność obejmuje konfigurację częstotliwości sygnału PWM, ustawianie wypełnienia impulsu (duty cycle) oraz dynamiczną zmianę parametrów w zależności od warunków środowiskowych. PWM jest wykorzystywane głównie do regulacji intensywności doświetlania rośliny za pomocą lamp LED.
+Implementacja PWM umożliwia precyzyjne sterowanie elementami wykonawczymi wymagającymi sygnału analogowego, takimi jak silniki czy regulacja jasności diody LED. Funkcjonalność obejmuje konfigurację częstotliwości sygnału PWM, ustawianie wypełnienia impulsu (duty cycle) oraz dynamiczną zmianę parametrów w zależności od warunków środowiskowych. PWM jest wykorzystywane do regulacji intensywności świecenia diod LED w diodzie RGB LED3 [schemat]. %dodaj schemat
 
-%wolne
+\subsubsection{Inicjalizacja PWM}
+\begin{enumerate}
+    \item 
+\end{enumerate}
+
+
+
+
+
+
+
+
+%olek
 \subsection{Przetwornik analogowo-cyfrowy (ADC)}
 \label{sec:ADC}
 System wykorzystuje przetwornik analogowo-cyfrowy do odczytu analogowego wejścia czujnika określanego jako "czujnik wilgotności". Należy zaznaczyć, że termin "wilgotność" jest w tym przypadku skrótem myślowym, ponieważ w rzeczywistości nie mierzymy bezpośrednio wilgotności gleby, a jej przewodność elektryczną, która jest skorelowana z zawartością wody w glebie. Implementacja obejmuje:
@@ -412,7 +427,6 @@ Wbudowany przetwornik ADC jest przetwornikiem 12-bitowym, co oznacza, że może 
     \end{enumerate}
 
 \subsubsection{Obliczanie masek do odczytu wartości rejestrów}
-    \subsubsubsection{Stan przetwarzania}
         Aby móc zmieniać stan przetwarzania potrzebna jest maska, która pozwoli wybrać tylko interesujące nas bity z rejestru AD0CR.
         \begin{enumerate}
             \item W rejestrze AD0CR (0x4003 4000) na bicie 21 znajduje się informacja o stanie przetwornika:
@@ -422,13 +436,64 @@ Wbudowany przetwornik ADC jest przetwornikiem 12-bitowym, co oznacza, że może 
             \end{itemize}
             \item Zatem potrzebujemy maski (1<<21)
         \end{enumerate}
+\subsubsection{Ustawianie wartości AD0CR}
+    W rejestrze AD0CR (0x4003 4000) na bitach 15:8 znajduje się wartość przez jaką dzielony jest PCLK, by uzyskać częstotliwość próbkowania.
+    Zatem potrzebujemy maski \\
+    \[
+    (0xCLKDIV<<8) OR (1<<21)
+    \]
+    Gdzie:\\
+    \begin{align*}
+        \text{CLKDIV} = \text{rate} \cdot 65 \\
+        \text{CLKDIV} = \frac{2 \cdot PCLK  + \text{CLKDIV}}{2 \cdot \text{CLKDIV}} - 1\\
+    \end{align*}
+    rate = 0,2MHz\\
+    \\
+    Aby ustawić wartość AD0CR, należy wykonać następujące kroki:
+    \begin{enumerate}
+        \item Wczytaj aktualną wartość rejestru AD0CR (0x4003 4000) do zmiennej.
+        \item Wykonaj operację OR na tej zmiennej oraz masce.
+        \item Zapisz zmienną z wynikiem do rejestru AD0CR
+    \end{enumerate}
+    W opisywanym projekcie przetwornik ADC nie korzysta z przerwań.
 
-    \subsubsubsection{}
-        \begin{enumerate}
-            \item W rejestrze AD0CR (0x4003 4000) na bitach 15:12 znajduje się informacja o wybranym kanale:
-            \begin{itemize}
-        \end{itemize}
+    \subsubsection{Przeliczanie odczytu na dane liczbowe}
+    Jak napisano na początku podrozdziału, przetwornik ADC korzysta z metody SAR (Successive Approximation Register). SAR jest realizowany sprzętowo. Sposób działania przetwornika jest następujący:\\
+    Dla uproszczenia przyjmujemy, że ADC ma 3 bity. Zakres wartości cyfrowych to 0-7. W rzeczywistości przetwornik ma 12 bitów.\\
+    Zakładamy, że:
 
+    \begin{align*}
+        V_{\text{ref}} &= \SI{3.3}{\volt} \\
+        V_{\text{in}} &= \SI{2.0}{\volt}
+    \end{align*}
+    Każdy krok, to 
+    \begin{align*}
+        \frac{\SI{3.3}{\volt}}{8} = \SI{0.4125}{\volt}
+    \end{align*}
+
+    \begin{enumerate}
+        \item Ustawiamy najbardziej znaczący bit na 1, więc liczba wynoch 100.
+        \item Następnie sprawdzamy, czy:
+            \begin{align*}
+                V_{\text{in}} \geq \frac{4}{8} \cdot V_{\text{ref}}\\
+                \SI{2.0}{\volt} \geq \SI{1.65}{\volt}
+            \end{align*}
+        \item Tak, więc zachowujemy najstarszy bit i ustawiamy kolejny bit na 1, czyli 110.
+        \item Następnie sprawdzamy, czy:
+            \begin{align*}
+                V_{\text{in}} \geq \frac{6}{8} \cdot V_{\text{ref}}\\
+                \SI{2.0}{\volt} \geq \SI{2.475}{\volt}
+            \end{align*}
+        \item Nie, więc zmieniamy bit na 0, czyli 101. Ustawiamy kolejny bit na 1, czyli 101.
+        \item Ponownie sprawdzamy, czy:
+            \begin{align*}
+                V_{\text{in}} \geq \frac{5}{8} \cdot V_{\text{ref}}\\
+                \SI{2.0}{\volt} \geq \SI{2.06}{\volt}
+            \end{align*}
+        \item Nie, więc zmieniamy bit na 0, czyli 100. Wartość cyfrowa wynosi 100, czyli 4 w systemie dziesiętnym, co odpowiada lekko ponad połowie zakresu odczytu ($\frac{4}{7} \approx 0.57$, a stosunek $\frac{V_{\text{in}}}{V_{\text{ref}}} \approx 0.60$).
+        
+    \end{enumerate}
+    Uzyskany pomiar służy do określenia wilgotności gleby i wypisanie na wyświtlacz odpowiedniego komunikatu, zostało to opisane w sekcji \ref{sec:wykorzystanie_ADC}.
 %olek
 \subsection{Komparator LM393}
 Przeszukując sieć w poszukiwaniu dokumentacji komparatora LM393 nie mogliśmy znaleźć idealnie odpowiadającego opisu. Mimo, iż oznaczenia na układzie scalonym się pokrywają (dokumentacja dotyczy LM393), to wyprowadzenia nie są identyczne. W związku z tym nie udało się znaleźć dokładnego opisu, ale zasada działania przetwornika jest taka sama. 
