--- a/doc/dokumentacja/dokumentacja.tex
+++ b/doc/dokumentacja/dokumentacja.tex
@@ -15,7 +15,7 @@
 \author{
   Julia Dobroszek 251504 \\
   Aleksander Kaźmierczak 251544 (kierownik grupy)\\
-  Malwina Wodnicka 251XXX \\  % Tutaj należy wstawić właściwy numer indeksu
+  Malwina Wodnicka 251663 \\  
 }
 
 
@@ -34,7 +34,9 @@
     członek zespołu & funkcjonalność\\
     \hline
     Olek & i2c, light, pwm, adc\\
+   \hline
     Malwina & gpio, audio, timer\\
+   \hline
     Julka & SPI, oled, czujnik temperatury\\
     \hline
     \end{tabular}
