--- a/doc/dokumentacja/dokumentacja.tex
+++ b/doc/dokumentacja/dokumentacja.tex
@@ -103,14 +103,10 @@ Inteligentna donica dostarcza użytkownikowi informacji o stanie rośliny poprze
 \input{i2c}
 
 %Malwina
-\subsection{Sterowanie GPIO}
-System wykorzystuje piny GPIO mikrokontrolera do sterowania różnymi elementami wykonawczymi donicy. Funkcjonalność ta obejmuje konfigurację kierunku pinów (wejście/wyjście), ustawianie stanów logicznych oraz obsługę przerwań sprzętowych. GPIO jest wykorzystywane między innymi do sterowania diodami sygnalizacyjnymi, wykrywania poziomu wody oraz obsługi przycisków interfejsu użytkownika.
-
+\input{gpio}
 %olek
 %zaimportowanie pliku z opisem czujnika swiatla
 \input{czujnik_swiatla}
-
-
 
 %Julka
 \input{termometr}
